force-app/main/default/objects/Branch__c/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <label>Account Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>