force-app/main/default/objects/Branch__c/fields/Branch_Head__c.field-meta.xml
<CustomField>
    <fullName>Branch_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branches2</relationshipName>
    <type>Lookup</type>
</CustomField>