force-app/main/default/objects/Branch__c/fields/Branch_Id__c.field-meta.xml
<CustomField>
    <fullName>Branch_Id__c</fullName>
    <label>Branch Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>