force-app/main/default/objects/Branch__c/fields/Fssai_Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>Fssai_Licence_Number__c</fullName>
    <label>Fssai Licence Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>