force-app/main/default/objects/Branch__c/fields/Manager_Mobile_Numer__c.field-meta.xml
<CustomField>
    <fullName>Manager_Mobile_Numer__c</fullName>
    <formula>Manager_Name__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Mobile Numer</label>
    <type>Text</type>
</CustomField>