force-app/main/default/objects/Branch__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>