force-app/main/default/objects/Branch__c/fields/Pan_Number__c.field-meta.xml
<CustomField>
    <fullName>Pan_Number__c</fullName>
    <label>Pan Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>