force-app/main/default/objects/Branch__c/fields/SAP_28_GST_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_28_GST_Code__c</fullName>
    <label>SAP 28% GST Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>