force-app/main/default/objects/Branch__c/validationRules/GST_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GST_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(GST_No__c != null ,OR(
NOT(REGEX(GST_No__c,&quot;^([0][1-9]|[1-2][0-9]|[3][0-7])([a-zA-Z]{5}[0-9]{4}[a-zA-Z]{1}[1-9a-zA-Z]{1}[zZ]{1}[0-9a-zA-Z]{1})+$&quot;)), MID(GST_No__c,3,10) != Pan_Number__c
))
,TRUE,FALSE
)</errorConditionFormula>
    <errorMessage>Please Enter valid GST Number</errorMessage>
</ValidationRule>