force-app/main/default/objects/Branch__c/validationRules/Pan_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Pan_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Pan_Number__c ) ) ,NOT( REGEX( Pan_Number__c , &quot;[A-Z]{5}[0-9]{4}[A-Z]{1}&quot;) ))</errorConditionFormula>
    <errorMessage>Enter Valid Pan Number</errorMessage>
</ValidationRule>