force-app/main/default/objects/Branch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Branch_Id__c</columns>
    <columns>Company_Id__c</columns>
    <columns>Cash_In_Hand__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>